--- a/etc/disbatch/htdocs/index.html
+++ b/etc/disbatch/htdocs/index.html
@@ -62,8 +62,10 @@
 
     <div class="container">
       <div class="starter-template">
-        <h1>Queue Browser</h1>
+        <h1>Queues</h1>
         <div id="tablecontent-jsdata"></div>
+        <h1>Nodes</h1> (if blank then no max threads for the node)
+        <div id="nodes-table"></div>
         <button type="button" class="btn btn-default" data-toggle="modal" data-target=".create-new-queue-modal-sm">New Queue</button>
         <div class="modal fade create-new-queue-modal-sm" tabindex="-1" role="dialog" aria-labelledby="createNewQueue">
           <div class="modal-dialog modal-sm">
@@ -98,7 +100,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-default" onclick="loadQueues()">Refresh</button>
+        <button type="button" class="btn btn-default" onclick="loadQueuesAndNodes()">Refresh</button>
       </div>
     </div><!-- /.container -->
 
