change FIXME wordings in code files

--- a/etc/disbatch/htdocs/index.html
+++ b/etc/disbatch/htdocs/index.html
@@ -73,7 +73,7 @@
                   <div class="form-group">
                     <label for="inputName" class="col-sm-3 control-label">Name</label>
                     <div class="col-sm-9">
-                      <!-- FIXME: require some sort of input -->
+                      <!-- FIXME: require some sort of input for new queue name -->
                       <input type="text" class="form-control number" id="inputName" placeholder="Name">
                     </div>
                   </div>
