wording changes to prefer 'DEN'

--- a/etc/disbatch/htdocs/index.html
+++ b/etc/disbatch/htdocs/index.html
@@ -58,7 +58,7 @@
       <div class="starter-template">
         <h1>Queues</h1>
         <div id="tablecontent-jsdata"></div>
-        <h1>Nodes</h1> (if blank then no max threads for the node)
+        <h1>Disbatch Execution Nodes</h1> (if blank then no max threads for the DEN)
         <div id="nodes-table"></div>
         <button type="button" class="btn btn-default" data-toggle="modal" data-target=".create-new-queue-modal-sm">New Queue</button>
         <div class="modal fade create-new-queue-modal-sm" tabindex="-1" role="dialog" aria-labelledby="createNewQueue">
